[gd_scene load_steps=2 format=3 uid="uid://n7nnsppfa5c7"]

[ext_resource type="Script" path="res://in_game_menu/in_game_menu.gd" id="1_h1gvd"]

[node name="in_game_menu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_h1gvd")

[node name="ColorRect" type="ColorRect" parent="."]
self_modulate = Color(1, 1, 1, 0.666667)
clip_contents = true
offset_left = 145.0
offset_top = 145.0
offset_right = 665.0
offset_bottom = 450.0
color = Color(0, 0, 0, 1)

[node name="MarginContainer" type="MarginContainer" parent="ColorRect"]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/MarginContainer"]
clip_contents = true
layout_mode = 2
size_flags_vertical = 4

[node name="continue_btn" type="Button" parent="ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 30
text = "<Продолжить>"

[node name="options_btn" type="Button" parent="ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 30
text = "<Настройки>"

[node name="exit_btn" type="Button" parent="ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 30
text = "<Выйти>"

[node name="RichTextLabel" type="RichTextLabel" parent="ColorRect"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -55.0
offset_right = 510.0
offset_bottom = -5.0
grow_vertical = 0
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
text = "_"
scroll_active = false
scroll_following = true
tab_size = 5
shortcut_keys_enabled = false

[node name="Label" type="Label" parent="ColorRect"]
layout_mode = 1
offset_right = 520.0
offset_bottom = 45.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 30
text = "И ТУТ ВСЁ ВОКРУГ ЗАМЕРЛО"
horizontal_alignment = 1

[node name="Timer" type="Timer" parent="ColorRect"]
wait_time = 0.1

[node name="ColorRect2" type="ColorRect" parent="."]
visible = false
offset_left = 737.0
offset_top = 267.0
offset_right = 1157.0
offset_bottom = 377.0
size_flags_horizontal = 4
color = Color(0, 0, 0, 0.666667)

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 5
alignment = 1
metadata/_edit_lock_ = true

[node name="Label" type="Label" parent="ColorRect2/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 30
text = "Значит ты решил уйти?"
uppercase = true

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
alignment = 1

[node name="yes_btn" type="Button" parent="ColorRect2/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/icon_focus_color = Color(0, 0.470588, 0, 0.588235)
theme_override_font_sizes/font_size = 30
text = " Я УВЕРЕН "

[node name="no_btn" type="Button" parent="ColorRect2/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/icon_focus_color = Color(0.470588, 0, 0, 0.588235)
theme_override_font_sizes/font_size = 30
text = "ПЕРЕДУМАЛ"

[connection signal="mouse_entered" from="ColorRect/MarginContainer/VBoxContainer/continue_btn" to="." method="_on_continue_btn_mouse_entered"]
[connection signal="pressed" from="ColorRect/MarginContainer/VBoxContainer/continue_btn" to="." method="_on_continue_btn_pressed"]
[connection signal="mouse_entered" from="ColorRect/MarginContainer/VBoxContainer/options_btn" to="." method="_on_options_btn_mouse_entered"]
[connection signal="mouse_entered" from="ColorRect/MarginContainer/VBoxContainer/exit_btn" to="." method="_on_exit_btn_mouse_entered"]
[connection signal="pressed" from="ColorRect/MarginContainer/VBoxContainer/exit_btn" to="." method="_on_exit_btn_pressed"]
[connection signal="timeout" from="ColorRect/Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="ColorRect2/VBoxContainer/HBoxContainer/yes_btn" to="." method="_on_yes_btn_pressed"]
[connection signal="pressed" from="ColorRect2/VBoxContainer/HBoxContainer/no_btn" to="." method="_on_no_btn_pressed"]
